# Mette

./: .gitignore  README.md  pyproject.toml  setup.py
data/: README.md  arable-land-use-per-person.csv  world-population-with-and-without-fertilizer.csv
notebooks/: development_story.ipynb  energy_and_SDGs.ipynb
src/mette/: __init__.py
tests/: __init__.py
